test-suite/primitive/arrays/univs.v
Primitive array := #array_type.

Fail Check [| | nat : Set |]@{Set}.
Check [| | nat : Set |]@{_}.

Check [| | 0 : nat |]@{Set}.
